<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootRL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_girl"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:gravity="center_vertical"
        android:src="@drawable/beam_logo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/White"
        android:textSize="12sp"
        android:text="@string/BeamInfo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/White"
        android:textSize="12sp"
        android:text="@string/SamaInfo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/White"
        android:textSize="12sp"
        android:text="@string/LandasInfo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/White"
        android:textSize="12sp"
        android:text="@string/Ack"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/White"
        android:textSize="12sp"
        android:text="@string/powered_by"/>

</LinearLayout>