<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:backgroundTint="@color/White"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/ColorPrimary">

        <com.github.abdularis.civ.AvatarImageView
            android:background="@drawable/circle"
            android:backgroundTint="@color/ColorPrimaryDark"
            android:id="@+id/userAvatar"
            android:visibility="visible"
            app:textColor="@color/White"
            app:textSize="35sp"
            android:layout_centerInParent="true"
            android:layout_height="150dp"
            android:layout_width="150dp" />


    </RelativeLayout>

    <TextView
        android:id="@+id/Username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/un"
        android:textColor="@color/ColorPrimaryDark"
        android:textFontWeight="15sp"
        android:textSize="25sp" />


    <TextView
        android:id="@+id/peerUsername"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button"
        android:backgroundTint="@color/ColorPrimary"
        android:includeFontPadding="true"
        android:padding="15dp"
        android:text="@string/dummy"
        android:textColor="@color/White"
        android:textSize="20sp"
        android:textAlignment="gravity"
        android:gravity="center_horizontal"/>

    <ImageView
        android:id="@+id/editName"
        android:layout_marginLeft="290dip"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@color/ColorPrimary"
        android:src="@drawable/edit" />

    <TextView
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/e"
        android:textColor="@color/ColorPrimaryDark"
        android:textFontWeight="15sp"
        android:textSize="25sp" />


    <TextView
        android:id="@+id/userEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button"
        android:backgroundTint="@color/ColorPrimary"
        android:includeFontPadding="true"
        android:padding="15dp"
        android:text="@string/edummy"
        android:textColor="@color/White"
        android:textSize="20sp"
        android:textAlignment="gravity"
        android:gravity="center_horizontal"/>

</LinearLayout>

